Fixed tabzilla letter spacing.

--- a/media/css/sandstone/tabzilla.less
+++ b/media/css/sandstone/tabzilla.less
@@ -161,6 +161,7 @@
     font-weight: normal;
     text-transform: uppercase;
     border: 0;
+    letter-spacing: 0;
 }
 
 #tabzilla-panel #tabzilla-nav {
